# ocr-ann-transfer

./: .gitignore  README.md  pyproject.toml
model/: line_model_config.json
src/ocr-ann-transfer/: text_from_ocr.py
src/ocr_ann_transfer/: ann_transfer.py  config.py  crop_image.py  line_detection.py  map_image_to_text.py  text_from_ocr.py  utility.py
src/ocr_ann_transfer/monlam_ocr/: line_detection.py  utils.py
tests/ann_transfer/: test_ann_transfer.py
tests/ann_transfer/data/: clean_text.txt  ocr_text.txt
tests/crop_image/: test_crop_image.py
tests/crop_image/data/xml/: I1KG812750004.xml
tests/map_image_to_text/: test_map_image_to_text.py
tests/map_image_to_text/create_line_texts/: test_create_line_texts.py
tests/map_image_to_text/create_line_texts/data/: page_texts_to_images.csv
tests/map_image_to_text/create_page_texts/: test_map_image_to_text.py
tests/map_image_to_text/create_page_texts/data/: test_file.txt
tests/map_image_to_text/map_line_texts_to_images/: test_map_line_texts_to_images.py
tests/map_image_to_text/map_line_texts_to_images/data/line_texts/I1KG812750004/: I1KG812750004_0001.txt  I1KG812750004_0002.txt  I1KG812750004_0003.txt  I1KG812750004_0004.txt
tests/map_image_to_text/map_page_texts_to_images/: test_map_page_texts_to_images.py
tests/map_image_to_text/map_page_texts_to_images/data/page_texts/: 3_00001.txt  3_00002.txt  3_00003.txt
tests/text_from_ocr/: test_text_from_ocr.py
tests/text_from_ocr/data/: expected_text.txt
