[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_ann_transfer"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "package to transfer annotation to ocr data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
  "ocr-non-bdrc @ git+https://github.com/OpenPecha/OCR-non-bdrc.git",
  " antx",
  "Pillow  >= 8.4.0",
  "numpy >= 1.26.4",
  "onnxruntime >= 1.17.3",
  "scipy >= 1.13.0",
  "opencv-python >= 4.9.0.80",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
